[project]
name = "wildve"
version = "0.1.0"
description = "WildVE: Wildlife Video Extractor - Scans video for wildlife using an ensemble of AI models, extracts clips and reports"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "Luke Sheneman", email = "sheneman@uidaho.edu" },
]

dependencies = [
    "setuptools<70",
    "torch",
    "opencv-python",
    "imageio[ffmpeg]",
    "tqdm",
    "pandas",
    "nvidia-ml-py3",
    "ultralytics",
    "transformers",
    "open_clip_torch",
    "PytorchWildlife>=1.2",
    "yolov5>=7.0",
    "lightning",
    "omegaconf",
    "rich",
    "Pillow",
    "numpy>=1.26.1",
]

[project.urls]
Homepage = "https://github.com/sheneman/wildve"
Repository = "https://github.com/sheneman/wildve"

[tool.uv]
override-dependencies = [
    "numpy>=1.26.1",
    "yolov5>=7.0",
]
